--- a/src/solution.html
+++ b/src/solution.html
@@ -38,38 +38,88 @@
                 </div>
 
                 <div class="page-banner wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
-                    <picture>
-                        <source srcset="images/content/solution/banner_desk.jpg, images/content/solution/banner_desk@2x.jpg 2x" media="(min-width: 1024px)">
-                        <source srcset="images/content/solution/banner_tablet.jpg, images/content/solution/banner_tablet@2x.jpg 2x" media="(min-width: 768px)">
-                        <img src="images/content/solution/banner_mob.jpg" srcset="images/content/solution/banner_mob@2x.jpg 2x" alt="alt">
-                    </picture>
+                    <div class="js-before-after twentytwenty-container">
+                        <picture>
+                            <source srcset="images/content/case/banner_desk.jpg, images/content/case/banner_desk@2x.jpg 2x" media="(min-width: 1024px)">
+                            <source srcset="images/content/case/banner_tablet.jpg, images/content/case/banner_tablet@2x.jpg 2x" media="(min-width: 768px)">
+                            <img src="images/content/case/banner_mob.jpg" srcset="images/content/case/banner_mob@2x.jpg 2x" alt="alt">
+                        </picture>
+                        <picture>
+                            <source srcset="images/content/solution/banner_desk.jpg, images/content/solution/banner_desk@2x.jpg 2x" media="(min-width: 1024px)">
+                            <source srcset="images/content/solution/banner_tablet.jpg, images/content/solution/banner_tablet@2x.jpg 2x" media="(min-width: 768px)">
+                            <img src="images/content/solution/banner_mob.jpg" srcset="images/content/solution/banner_mob@2x.jpg 2x" alt="alt">
+                        </picture>
+                    </div>
+                </div>
+
+                <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
                 <div class="cols-3">
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
-                        <div class="feature">
-                            <div class="feature__image"><img src="images/content/solution/icon_1.svg" alt="alt"></div>
-                            <div class="feature__text-block">
-                                <h3>Найдите новых пациентов</h3>
-                                <p>Создайте компанию нацеленную на новых клиентов, которые получат выгоду от ваших услуг.</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature">
+                                    <div class="feature__image"><img src="images/content/solution/icon_1.svg" alt="alt"></div>
+                                    <div class="feature__text-block">
+                                        <h3>Найдите новых пациентов</h3>
+                                        <p>Создайте компанию нацеленную на новых клиентов, которые получат выгоду от ваших услуг.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature">
+                                    <div class="feature__image"><img src="images/content/solution/icon_1.svg" alt="alt"></div>
+                                    <div class="feature__text-block">
+                                        <h3>Найдите новых пациентов</h3>
+                                        <p>Создайте компанию нацеленную на новых клиентов, которые получат выгоду от ваших услуг.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
-                        <div class="feature">
-                            <div class="feature__image"><img src="images/content/solution/icon_2.svg" alt="alt"></div>
-                            <div class="feature__text-block">
-                                <h3>Увеличьте средний чек услуги</h3>
-                                <p>Повысте маржинальность услуги, с помощью наших возможностей.</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature">
+                                    <div class="feature__image"><img src="images/content/solution/icon_2.svg" alt="alt"></div>
+                                    <div class="feature__text-block">
+                                        <h3>Увеличьте средний чек услуги</h3>
+                                        <p>Повысте маржинальность услуги, с помощью наших возможностей.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature">
+                                    <div class="feature__image"><img src="images/content/solution/icon_2.svg" alt="alt"></div>
+                                    <div class="feature__text-block">
+                                        <h3>Увеличьте средний чек услуги</h3>
+                                        <p>Повысте маржинальность услуги, с помощью наших возможностей.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
-                        <div class="feature">
-                            <div class="feature__image"><img src="images/content/solution/icon_3.svg" alt="alt"></div>
-                            <div class="feature__text-block">
-                                <h3>Обновите свой дизайн</h3>
-                                <p>Подчеркните свой уникальный имидж и проецируйте его на клиентов.</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature">
+                                    <div class="feature__image"><img src="images/content/solution/icon_3.svg" alt="alt"></div>
+                                    <div class="feature__text-block">
+                                        <h3>Обновите свой дизайн</h3>
+                                        <p>Подчеркните свой уникальный имидж и проецируйте его на клиентов.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature">
+                                    <div class="feature__image"><img src="images/content/solution/icon_3.svg" alt="alt"></div>
+                                    <div class="feature__text-block">
+                                        <h3>Обновите свой дизайн</h3>
+                                        <p>Подчеркните свой уникальный имидж и проецируйте его на клиентов.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -94,38 +144,90 @@
 
                 <div class="cols-4">
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
-                        <div class="feature_2">
-                            <div class="feature_2__image"><img src="images/content/solution/icon_4.svg" alt="alt"></div>
-                            <div class="feature_2__text-block">
-                                <h4>Погружаемся</h4>
-                                <p>Погружаемся в ваш бизнес и изучаем его особенности</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_4.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Погружаемся</h4>
+                                        <p>Погружаемся в ваш бизнес и изучаем его особенности</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_4.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Погружаемся</h4>
+                                        <p>Погружаемся в ваш бизнес и изучаем его особенности</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
-                        <div class="feature_2">
-                            <div class="feature_2__image"><img src="images/content/solution/icon_5.svg" alt="alt"></div>
-                            <div class="feature_2__text-block">
-                                <h4>Разрабатываем</h4>
-                                <p>Разрабатываем стратегию развития вашей компании в digital на год</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_5.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Разрабатываем</h4>
+                                        <p>Разрабатываем стратегию развития вашей компании в digital на год</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_5.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Разрабатываем</h4>
+                                        <p>Разрабатываем стратегию развития вашей компании в digital на год</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
-                        <div class="feature_2">
-                            <div class="feature_2__image"><img src="images/content/solution/icon_6.svg" alt="alt"></div>
-                            <div class="feature_2__text-block">
-                                <h4>Реализовываем</h4>
-                                <p>Реализовываем стратегию по этапам, в рамках утверждённого плана</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_6.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Реализовываем</h4>
+                                        <p>Реализовываем стратегию по этапам, в рамках утверждённого плана</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_6.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Реализовываем</h4>
+                                        <p>Реализовываем стратегию по этапам, в рамках утверждённого плана</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.4s">
-                        <div class="feature_2">
-                            <div class="feature_2__image"><img src="images/content/solution/icon_7.svg" alt="alt"></div>
-                            <div class="feature_2__text-block">
-                                <h4>Гарантируем</h4>
-                                <p>Гарантируем получение результата</p>
+                        <div class="flip-flap">
+                            <div class="flip-flap__front">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_7.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Гарантируем</h4>
+                                        <p>Гарантируем получение результата</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-flap__back">
+                                <div class="feature_2">
+                                    <div class="feature_2__image"><img src="images/content/solution/icon_7.svg" alt="alt"></div>
+                                    <div class="feature_2__text-block">
+                                        <h4>Гарантируем</h4>
+                                        <p>Гарантируем получение результата</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -139,16 +241,22 @@
                         <p>Обладая более чем 15-летним опытом маркетинга в технологической отрасли, VSignal имеет возможности для предоставления комплексных маркетинговых решений, которые помогут вам получить новые перспективы.</p>
                     </div>
                     <div class="imaged-block__image wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
-                        <picture style="max-width: 440px">
-                            <!--<source srcset="images/content/solution/img_2_desk.webp, images/content/solution/img_2_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
+                        <!--<picture>
+                            <source srcset="images/content/solution/img_2_desk.webp, images/content/solution/img_2_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
                             <source srcset="images/content/solution/img_2_desk.png, images/content/solution/img_2_desk@2x.png 2x" media="(min-width: 768px)">
-                            <!--<source srcset="images/content/solution/img_2_mobile.webp, images/content/solution/img_2_mobile@2x.webp 2x" type="image/webp">-->
+                            <source srcset="images/content/solution/img_2_mobile.webp, images/content/solution/img_2_mobile@2x.webp 2x" type="image/webp">
                             <img src="images/content/solution/img_2_mobile.png" srcset="images/content/solution/img_2_mobile@2x.png 2x" alt="alt">
+                        </picture>-->
+                        <picture style="max-width: 440px">
+                            <!--<source srcset="images/content/advice/banner.webp, images/content/advice/banner@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
+                            <source srcset="images/content/advice/banner.png, images/content/advice/banner@2x.png 2x" media="(min-width: 768px)">
+                            <!--<source srcset="images/content/advice/banner_mob.webp, images/content/advice/banner_mob@2x.webp 2x" type="image/webp">-->
+                            <img src="images/content/advice/banner_mob.png" srcset="images/content/advice/banner_mob@2x.png 2x" alt="alt">
                         </picture>
                     </div>
                 </div>
 
-                <p class="article-detail__nav-block text-right">
+                <!--<p class="article-detail__nav-block text-right">
                     <a class="nav-link" href="solutions.html">
                         <span class="nav-link__text">Следующее решение</span>
                         <span class="nav-link__arrow">
@@ -159,8 +267,10 @@
                             </span>
                         </span>
                     </a>
-                </p>
+                </p>-->
             </section>
+
+            //= template/feedback-form.html
 
             <section class="cases-block">
                 <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Наши кейсы</h2>
@@ -200,8 +310,6 @@
                     </div>
                 </div>
             </section>
-
-            //= template/feedback-form.html
         </div>
     </div>
 
@@ -216,6 +324,16 @@
             offset: 150
         });
         wow.init();
+    </script>
+    <script src="js/jquery.event.move.js"></script>
+    <script src="js/jquery.twentytwenty.js"></script>
+    <script>
+        $(document).ready(function() {
+            $(".js-before-after").twentytwenty({
+                before_label: 'До',
+                after_label: 'После',
+            });
+        });
     </script>
 </body>
 
