--- a/src/solution.html
+++ b/src/solution.html
@@ -31,10 +31,24 @@
     <div class="page-content">
         <div class="container">
             <section class="article-detail">
-                <h1 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Медицинские услуги</h1>
+                <h1 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Медицинский маркетинг</h1>
 
-                <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="vertical-indent wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
+                    <p>На рынке медицинских услуг, несмотря на многообразие существующих форм: амбулаторные услуги, стоматологии, санатории и узкоспециализированные клиники. Существует две общие проблемы их объединяющие.</p>
+                    <ol>
+                        <li>
+                            <b>Управленческая.</b><br>
+                            Когда один человек совмещает в себе много ролей.
+                            Например: глав врач, он же руководитель организации и он же директор по маркетингу. С одной стороны это позволяет контролировать все процессы лично. С другой сильно тормозит развитие клиники и не даёт раскрыть весь
+                            возможный потенциал. В том числе по причине тотальной занятости руководителя. И здесь появляется следующая проблема.<br><br>
+                        </li>
+                        <li>
+                            <b>Кадровая.</b><br>
+                            Как только у руководителя кончается желание и время разбираться самостоятельно. Он нанимает маркетолога или агентство. Чаще всего пришедший специалист не имеет подтверждённого опыта работы в медицине и пытается переложить
+                            знания и инструменты из е-коммерс (один из самых популярных сегментов интернет-маркетинга) на данную сферу. Это приводит к весьма негативным результатам. Клиника получает: дорогой и неработающий сайт, неэффективную
+                            рекламу, полное непонимание о том сколько пациентов пришло и откуда и вопросы по эффективности потраченных денег и времени.
+                        </li>
+                    </ol>
                 </div>
 
                 <div class="page-banner wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
@@ -53,7 +67,8 @@
                 </div>
 
                 <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Эти проблемы не решаются покупкой модных сервисов: CRM, Колтрекинг и т.д., а только усугубляются. Всё что вам необходимо - единая работающая система от момента первого клика пациентом по вашему рекламному банеру, до записи его
+                        в МИС (медицинская информационная система).</p>
                 </div>
 
                 <div class="cols-3">
@@ -107,7 +122,7 @@
                                 <div class="feature">
                                     <div class="feature__image"><img src="images/content/solution/icon_3.svg" alt="alt"></div>
                                     <div class="feature__text-block">
-                                        <h3>Обновите свой дизайн</h3>
+                                        <h3>Удержите повторных пациентов</h3>
                                         <p>Подчеркните свой уникальный имидж и проецируйте его на клиентов.</p>
                                     </div>
                                 </div>
@@ -116,7 +131,7 @@
                                 <div class="feature">
                                     <div class="feature__image"><img src="images/content/solution/icon_3.svg" alt="alt"></div>
                                     <div class="feature__text-block">
-                                        <h3>Обновите свой дизайн</h3>
+                                        <h3>Удержите повторных пациентов</h3>
                                         <p>Подчеркните свой уникальный имидж и проецируйте его на клиентов.</p>
                                     </div>
                                 </div>
@@ -127,9 +142,8 @@
 
                 <div class="imaged-block">
                     <div class="imaged-block__text-block wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
-                        <h2><span class="main-color">Развивайте</span> свою клинику не только сарафанным радио</h2>
-
-                        <p>Мы предоставляем все:<br> от разработки визуальной истории, которая подчеркивает уникальные возможности вашего бизнеса, до донесения вашей идеи на сайте, социальных сетях и других каналах для поиска новых клиентов.</p>
+                        <h2>Мы реализуем полный комплекс услуг:</h2>
+                        <p>от разработки визуальной концепции, которая подчеркнёт уникальные возможности вашей клиники, до донесения ваших преимуществ и видов услуг на сайте, в социальных сетях и в других каналах для поиска новых клиентов.</p>
                     </div>
                     <div class="imaged-block__image wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                         <picture>
@@ -140,7 +154,7 @@
                     </div>
                 </div>
 
-                <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Что предлагаем мы?</h2>
+                <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Что мы предлагаем конкретно?</h2>
 
                 <div class="cols-4">
                     <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
@@ -150,7 +164,7 @@
                                     <div class="feature_2__image"><img src="images/content/solution/icon_4.svg" alt="alt"></div>
                                     <div class="feature_2__text-block">
                                         <h4>Погружаемся</h4>
-                                        <p>Погружаемся в ваш бизнес и изучаем его особенности</p>
+                                        <p>Погружаемся в вашу сферу и изучаем её особенности</p>
                                     </div>
                                 </div>
                             </div>
@@ -159,7 +173,7 @@
                                     <div class="feature_2__image"><img src="images/content/solution/icon_4.svg" alt="alt"></div>
                                     <div class="feature_2__text-block">
                                         <h4>Погружаемся</h4>
-                                        <p>Погружаемся в ваш бизнес и изучаем его особенности</p>
+                                        <p>Погружаемся в вашу сферу и изучаем её особенности</p>
                                     </div>
                                 </div>
                             </div>
@@ -172,7 +186,7 @@
                                     <div class="feature_2__image"><img src="images/content/solution/icon_5.svg" alt="alt"></div>
                                     <div class="feature_2__text-block">
                                         <h4>Разрабатываем</h4>
-                                        <p>Разрабатываем стратегию развития вашей компании в digital на год</p>
+                                        <p>Разрабатываем стратегию развития вашей клиники в digital на год</p>
                                     </div>
                                 </div>
                             </div>
@@ -181,7 +195,7 @@
                                     <div class="feature_2__image"><img src="images/content/solution/icon_5.svg" alt="alt"></div>
                                     <div class="feature_2__text-block">
                                         <h4>Разрабатываем</h4>
-                                        <p>Разрабатываем стратегию развития вашей компании в digital на год</p>
+                                        <p>Разрабатываем стратегию развития вашей клиники в digital на год</p>
                                     </div>
                                 </div>
                             </div>
@@ -215,8 +229,8 @@
                                 <div class="feature_2">
                                     <div class="feature_2__image"><img src="images/content/solution/icon_7.svg" alt="alt"></div>
                                     <div class="feature_2__text-block">
-                                        <h4>Гарантируем</h4>
-                                        <p>Гарантируем получение результата</p>
+                                        <h4>Сопровождаем</h4>
+                                        <p>Сопровождаем вас на каждом этапе. Помогаем и гарантируем достижение целей</p>
                                     </div>
                                 </div>
                             </div>
@@ -224,8 +238,8 @@
                                 <div class="feature_2">
                                     <div class="feature_2__image"><img src="images/content/solution/icon_7.svg" alt="alt"></div>
                                     <div class="feature_2__text-block">
-                                        <h4>Гарантируем</h4>
-                                        <p>Гарантируем получение результата</p>
+                                        <h4>Сопровождаем</h4>
+                                        <p>Сопровождаем вас на каждом этапе. Помогаем и гарантируем достижение целей</p>
                                     </div>
                                 </div>
                             </div>
@@ -235,10 +249,15 @@
 
                 <div class="imaged-block">
                     <div class="imaged-block__text-block wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
-                        <h2>Как мы это делаем?</h2>
-                        <p><b>Поиск и привлечение новых возможностей для продаж</b></p>
-                        <p>Мы поможем вам позиционировать себя так, чтобы общаться с вашими потенциальными клиентами.</p>
-                        <p>Обладая более чем 15-летним опытом маркетинга в технологической отрасли, VSignal имеет возможности для предоставления комплексных маркетинговых решений, которые помогут вам получить новые перспективы.</p>
+                        <h2>Почему именно вы?</h2>
+                        <p><b>Вместо лишних слов - одна встреча.</b></p>
+                        <p>Мы ценим ваше и своё время и понимаем насколько важно оперативно включится в решение существующих задач. Поэтому предлагаем отложить всё лишнее и познакомиться на встрече.</p>
+                        <p><b>На ней мы:</b></p>
+                        <ul>
+                            <li>Совместно обсудим с вами все задачи.</li>
+                            <li>Вы оцените уровень нашей компетенции и получите честную обратную связь.</li>
+                            <li>Мы узнаем о вас больше и сможем подготовить уже более детальное предложение.</li>
+                        </ul>
                     </div>
                     <div class="imaged-block__image wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                         <!--<picture>
@@ -270,7 +289,32 @@
                 </p>-->
             </section>
 
-            //= template/feedback-form.html
+            <section class="feedback-form wow fadeInUpBig" data-wow-duration="1.5s">
+                <h2>Ваши контактные данные для связи</h2>
+                <form class="feedback-form__form" method="post" action="">
+                    <div class="feedback-form__row">
+                        <div class="feedback-form__block">
+                            <label class="feedback-form__label">
+                                <input class="input error" type="text" name="fio" value="" placeholder="Ваше имя">
+                            </label>
+                        </div>
+                        <div class="feedback-form__block">
+                            <label class="feedback-form__label">
+                                <input class="input" type="text" name="email" value="" placeholder="Ваш email">
+                            </label>
+                        </div>
+                        <div class="feedback-form__block">
+                            <label class="feedback-form__label">
+                                <textarea class="textarea" name="message" placeholder="Ваш вопрос"></textarea>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="feedback-form__button-block">
+                        <button class="button button--type_1" type="submit">Отправить</button>
+                        <p class="feedback-form__note">Отправляя заявку, вы даете согласие на обработку своих персональных данных и соглашаетесь с политикой конфиденциальности</p>
+                    </div>
+                </form>
+            </section>
 
             <section class="cases-block">
                 <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Наши кейсы</h2>
